--- a/thesis/abstract_cs.tex
+++ b/thesis/abstract_cs.tex
@@ -23,11 +23,16 @@ autoregresivními.
 Cíl výzkumu neautoregresivních metod strojového překladu je zlepšit kvalitu
 překladu a zároveň uchovat vysokou rychlost dekódování.
 %
-V naší práci se věnujeme výzkumu neautoregresivních modelů trénovaných pomocí
-takzvané \uv{connectionist temporal classification}.
+Naše práce předkládá rešerši publikovaných metod a poukazuje na některé
+nedostatky plynoucí z obecně přijímané evaluační metodologie.
 %
-
-
+Popisujeme experimenty s neautoregresivními modely trénovaných pomocí takzvané
+\uv{connectionist temporal classification}.
+%
+Z našich výsledků plyne, že i když dosahujeme nejlepších výsledků mezi
+neautoregresivními modely na datech z WMT z roku 2014, při porovnání s
+nejnovějšími optimalizovanými autoregresivními systémy tyto modely pořád
+zaostávají.
 
 
 
