--- a/thesis/abstract_en.tex
+++ b/thesis/abstract_en.tex
@@ -22,18 +22,18 @@ hence the decoding speed improves.
 A major drawback of this approach is lower translation quality compared to the
 autoregressive models.
 %
-The goal of non-autoregressive machine translation is to improve the
-translation quality, while retaining high decoding speed.
+The goal of the non-autoregressive translation research is to find methods that
+improve the translation quality, while retaining high decoding speed.
 %
-In this thesis, we explore the research progress so far, and bring together a
-number of techniques to advance towards the stated goal.
+In this thesis, we explore the research progress so far and identify flaws in
+the generally accepted evaluation methodology.
 %
 We experiement with non-autoregressive models trained with connectionist
 temporal classification.
 %
-\JH{sentence or two about the methods and findings}
-
-
+We find that even though our models achieve state-of-the-art performance on the
+standard WMT~14 benchmark, there is a large room for improvement when we
+compare non-autoregressive methods to highly optimized autoregressive models.
 
 
 %%% Local Variables:
