--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -176,18 +176,18 @@
 
   Different batch sizes on 36 cores
 
-  |------------------+-------+------+------+------+-------+-------+------+------|
-  | Batch @ 36 Cores |     1 |    2 |    4 |    8 |    16 |    32 |   64 |  128 |
-  |------------------+-------+------+------+------+-------+-------+------+------|
-  | AR Big           | 52087 |      |      |      | 12166 | 10151 | 9370 | 9244 |
-  | AR Base          | 16293 | 9727 | 7191 | 5420 |  3635 |  2925 | 2707 | 2664 |
-  |------------------+-------+------+------+------+-------+-------+------+------|
-  | Large            | 14542 |      |      | 8657 |  8357 |  8247 | 8238 |      |
-  | Base             |  3508 |      |      | 2927 |  2921 |  2920 | 2934 | 2948 |
-  | Small            |  2346 |      |      | 1933 |  1921 |  1921 | 1936 | 1950 |
-  | Micro            |  1952 |      |      | 1600 |  1588 |  1587 | 1607 | 1627 |
-  | Tiny             |   784 |      |      |  687 |   685 |   694 |  701 |  719 |
-  |------------------+-------+------+------+------+-------+-------+------+------|
+  |------------------+-------+-------+-------+-------+-------+-------+------+------|
+  | Batch @ 36 Cores |     1 |     2 |     4 |     8 |    16 |    32 |   64 |  128 |
+  |------------------+-------+-------+-------+-------+-------+-------+------+------|
+  | AR Big           | 52087 |       | 23478 | 16731 | 12166 | 10151 | 9370 | 9244 |
+  | AR Base          | 16293 |  9727 |  7191 |  5420 |  3635 |  2925 | 2707 | 2664 |
+  |------------------+-------+-------+-------+-------+-------+-------+------+------|
+  | Large            | 14542 | 11320 |  9534 |  8657 |  8357 |  8247 | 8238 |      |
+  | Base             |  3508 |  3126 |  2979 |  2927 |  2921 |  2920 | 2934 | 2948 |
+  | Small            |  2346 |  2079 |  1975 |  1933 |  1921 |  1921 | 1936 | 1950 |
+  | Micro            |  1952 |  1728 |  1641 |  1600 |  1588 |  1587 | 1607 | 1627 |
+  | Tiny             |   784 |   719 |   697 |   687 |   685 |   694 |  701 |  719 |
+  |------------------+-------+-------+-------+-------+-------+-------+------+------|
 
 *** Shortlist at 36 CPU cores
 
