--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -260,14 +260,24 @@ I understand that my work relates to the rights and obligations
 \addcontentsline{toc}{chapter}{Acknowledgements}
 \subsection*{Acknowledgements}
 
-{
-  děkuju. tos řek hezky.
-}
+{ I would like to thank my supervisor, prof. RNDr. Jan Hajič, Dr. for his
+  support throughout my study. \\
+  \\
+  I thank all my colleagues and friends at ÚFAL for the wonderful time I had
+  studying at Charles University. With special thanks to Jindra Libovický, with
+  whom I spent countless hours of research and fun working on papers that made
+  this thesis possible. I would also like to thank Lexi Birch and Barry Haddow
+  at the University of Edinburgh for the valuable feedback on my research
+  during the past year and a half.
+  \\
+  \\
+  I am especially grateful to my wife Gábina and my family for their love and
+  endless support. }
 
 \vfill
 
 
-{\noindent\footnotesize TODO akcknowledgementy}
+{\noindent\footnotesize \JH{TODO  akcknowledgementy -- lindat, neurem3, gauk, HPC, gourmet}}
 
 \cleardoublepage{}
 \addcontentsline{toc}{chapter}{Table of Contents}
