update decodding speed figures

--- a/thesis/img/throughputs/a100.tex
+++ b/thesis/img/throughputs/a100.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Sat 13 Nov 2021 05:46:35 PM GMT
+%% Sun 14 Nov 2021 11:30:27 PM GMT
 \path (0.000,0.000) rectangle (13.500,8.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -56,7 +56,7 @@
 \node[gp node center] at (12.947,0.677) {128};
 \draw[gp path] (1.872,7.691)--(1.872,0.985)--(12.947,0.985)--(12.947,7.691)--cycle;
 \node[gp node center,rotate=-270] at (0.016,4.338) {Decoding time (seconds)};
-\node[gp node center] at (7.409,0.215) {Batch size};
+\node[gp node center] at (7.409,0.215) {Batch size (sentences)};
 \node[gp node right] at (12.031,7.280) {\acs{ar} Large};
 \gpcolor{rgb color={0.200,0.200,0.200}}
 \gpsetlinewidth{2.50}
