--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -201,7 +201,9 @@ I understand that my work relates to the rights and obligations
   pursuant to Section~60 paragraph~1 of the Copyright Act.
 
 \vspace{2cm}
-\noindent Prague, November 15, 2021 \hspace{\fill}\theauthor\\ % doplňte patřičné datum, jméno a příjmení
+\noindent Prague, November 15, 2021 \hspace{\fill}\theauthor % doplňte patřičné
+                                                             % datum, jméno a
+                                                             % příjmení
 
 %%%   Výtisk pak na tomto míste nezapomeňte PODEPSAT!
 %%%                                         *********
@@ -261,16 +263,19 @@ I understand that my work relates to the rights and obligations
 \subsection*{Acknowledgements}
 
 { I would like to thank my supervisor, prof. RNDr. Jan Hajič, Dr. for his
-  support throughout my study. \\
-  \\
+  support throughout my study.
+
+  \vspace{1\baselineskip}
+  \noindent
   I thank all my colleagues and friends at ÚFAL for the wonderful time I had
   studying at Charles University. With special thanks to Jindra Libovický, with
   whom I spent countless hours of research and fun working on papers that made
   this thesis possible. I would also like to thank Lexi Birch and Barry Haddow
   at the University of Edinburgh for the valuable feedback on my research
   during the past year and a half.
-  \\
-  \\
+
+  \vspace{1\baselineskip}
+  \noindent
   I am especially grateful to my wife Gábina and my family for their love and
   endless support. }
 
